app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/*Site-wide*/
body {
  width: 1300px;
  margin: 0 auto;
  float: none;
  position: absolute;
  /*overflow: hidden;*/
}

/*#page-wrap {
  width: 800px;
  margin: 0 auto;
}*/

#session-info {
  font-family: 'PT Sans', sans-serif;
  float: right;
}

#site-title {
  font-family: 'Patua One', cursive;
  text-align: center;
  margin: 0 auto;
  display: block;
  width: 50%;
  margin-top: 30px;
}

ul {
  list-style-type: none
}

.homepage-links {
  font-family: 'Raleway', sans-serif;
}

.nav-bar {
  font-family: 'PT Sans', sans-serif;
}

/*Homepage*/
.homepage-header {
  font-family: 'Montserrat', sans-serif;
}

#featured {
  text-align: center;
  width: 80%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

#sidebar {
  float: right;
  margin-top: -510px;
  margin-left: 800px;
  margin-right: 0;

}

#destinations {
  margin-top: 100px;
  margin-right: 130px;
}

#first-city {
  text-align: center;
  float: left;
  margin-top: -20px;
  font-family: 'Bitter', serif;
}

#second-city {
  text-align: center;
  font-family: 'Bitter', serif;
  margin-right: 280px;
}

#third-city {
  text-align: center;
  float: right;
  margin-top: -135px;
  font-family: 'Bitter', serif;
}

#feature-1 {
  float: left;
  font-family: 'Bitter', serif;
  display: block;
  width: 300px;
}

#feature-2 {
  font-family: 'Bitter', serif;
  width: 300px;
  margin-left: 310px;
}

#feature-3 {
  float: right;
  font-family: 'Bitter', serif;
  width: 300px;
  margin-right: 120px;
  margin-top: -222px
}

/*user page*/
#user-details {
  text-align: center;
  width: 50%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

#user-info {
  float: right;
  text-align: left;
  margin-left: -500px;
  padding: -100px;
}

#user-posts {
  text-align: center;
  width: 50%;
  display: block;
  margin: 0 auto;
  margin-top: 300px;
}

#user-image {
  float:left;
  /*position: relative;*/
  margin-right: 0;
  padding: 0;
  margin-left: 150px;
}

.profile-header {
  font-family: 'Montserrat', sans-serif;
}

#user-bio-title {
  font-weight: 700;
}

#user-links {
  font-family: 'Raleway', sans-serif;
}

#post-list-header {
  font-family: 'Bitter', serif;
}

/*City Show Page*/
#city-header {
  font-family: 'Montserrat', sans-serif;
}

#city-post-list {
  font-family: 'Raleway', sans-serif;
}

/* Post view */
#entire-post {
  text-align: center;
  width: 70%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

#post-body {
  width: 800px;
  margin-top: 30px;
  margin-left: 50px;
  margin-bottom: 40px;
}

.post-title {
  font-family: 'Bitter', serif;
}

#cities-listing {
  font-family: 'Bitter', serif;
  font-weight: 400;
  font-size: 16px;
}

#post-byline {
  font-family: 'Raleway', sans-serif;
  font-size: 13px;
}

#post-body {
  font-family: 'Merriweather', serif;
  text-align: left
}

#edit-bar {
  font-family: 'PT Sans', sans-serif;
}

#comments-header {
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  margin-top: 100px
}

/* Comments form */
#post-comment-header {
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
}

#comment-content {
  font-family: 'Merriweather', serif;
  font-size: 14px;
}

#comment-info {
  font-family: 'PT Sans', sans-serif;
  font-style: italic;
  font-size: 12px
}

#comment-author-label{
  margin-top: -20px;
  font-family: 'Raleway', sans-serif;
  font-size: 14px;
  font-weight: 700;
}

.comment-author {
  font-family: 'Raleway', sans-serif;
  font-size: 14px;
  font-weight: 700;
}

/*Post edit page, new page, log in form*/
.form-labels {
  font-family: 'PT Sans', sans-serif;
}

.form {
  text-align: center;
  width: 70%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

/* Log In Page*/
#login-labels {
  font-family: 'PT Sans', sans-serif;
}

/*City Page*/
#city-page {
  text-align: center;
  width: 70%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

/*new user */
#signup-form {
  text-align: center;
  width: 70%;
  display: block;
  margin: 0 auto;
  margin-top: 80px;
}

